--- a/gsp662.md
+++ b/gsp662.md
@@ -9,19 +9,19 @@ gcloud services enable compute.googleapis.com
 gsutil mb gs://fancy-store-$DEVSHELL_PROJECT_ID
 git clone https://github.com/googlecodelabs/monolith-to-microservices.git
 cd ~/monolith-to-microservices
-chmod +x setup.sh
 ./setup.sh
 nvm install --lts
-curl -O -L https://github.com/Qwicklab/Level-1-AppDev-and-Infrastructure/blob/main/sh%20files/startup-script.sh
+cd ~/monolith-to-microservices
+curl -O -L https://github.com/CodingWithHardik/help/blob/master/sh%20files/startup-script.sh
 gsutil cp ~/monolith-to-microservices/startup-script.sh gs://fancy-store-$DEVSHELL_PROJECT_ID
 cd ~
 rm -rf monolith-to-microservices/*/node_modules
 gsutil -m cp -r monolith-to-microservices gs://fancy-store-$DEVSHELL_PROJECT_ID/
 gcloud compute instances create backend \
-    --machine-type=e2-medium \
+    --zone=$ZONE \
+    --machine-type=e2-standard-2 \
     --tags=backend \
    --metadata=startup-script-url=https://storage.googleapis.com/fancy-store-$DEVSHELL_PROJECT_ID/startup-script.sh
-gcloud compute instances list
 export EXTERNAL_IP=$(gcloud compute instances describe backend --zone=$ZONE --format='get(networkInterfaces[0].accessConfigs[0].natIP)')
 cd ~/monolith-to-microservices/react-app
 rm -f .env
@@ -35,7 +35,8 @@ cd ~
 rm -rf monolith-to-microservices/*/node_modules
 gsutil -m cp -r monolith-to-microservices gs://fancy-store-$DEVSHELL_PROJECT_ID/
 gcloud compute instances create frontend \
-    --machine-type=e2-medium \
+    --zone=$ZONE \
+    --machine-type=e2-standard-2 \
     --tags=frontend \
     --metadata=startup-script-url=https://storage.googleapis.com/fancy-store-$DEVSHELL_PROJECT_ID/startup-script.sh
 gcloud compute firewall-rules create fw-fe \
@@ -44,31 +45,33 @@ gcloud compute firewall-rules create fw-fe \
 gcloud compute firewall-rules create fw-be \
     --allow tcp:8081-8082 \
     --target-tags=backend
-gcloud compute instances list
 ```
 # Check the progress till task 4
-____
-## Run in cloudshell
 ```cmd
-gcloud compute instances stop frontend
-gcloud compute instances stop backend
+gcloud compute instances stop frontend --zone=$ZONE
+gcloud compute instances stop backend --zone=$ZONE
 gcloud compute instance-templates create fancy-fe \
+    --source-instance-zone=$ZONE \
     --source-instance=frontend
 gcloud compute instance-templates create fancy-be \
+    --source-instance-zone=$ZONE \
     --source-instance=backend
-gcloud compute instance-templates list
-gcloud compute instances delete --quiet  backend
+gcloud compute instances delete backend --zone=$ZONE --quiet
 gcloud compute instance-groups managed create fancy-fe-mig \
+    --zone=$ZONE \
     --base-instance-name fancy-fe \
     --size 2 \
     --template fancy-fe
 gcloud compute instance-groups managed create fancy-be-mig \
+    --zone=$ZONE \
     --base-instance-name fancy-be \
     --size 2 \
     --template fancy-be
 gcloud compute instance-groups set-named-ports fancy-fe-mig \
+    --zone=$ZONE \
     --named-ports frontend:8080
 gcloud compute instance-groups set-named-ports fancy-be-mig \
+    --zone=$ZONE \
     --named-ports orders:8081,products:8082
 gcloud compute health-checks create http fancy-fe-hc \
     --port 8080 \
@@ -88,15 +91,15 @@ gcloud compute firewall-rules create allow-health-check \
     --source-ranges 130.211.0.0/22,35.191.0.0/16 \
     --network default
 gcloud compute instance-groups managed update fancy-fe-mig \
+    --zone=$ZONE \
     --health-check fancy-fe-hc \
     --initial-delay 300
 gcloud compute instance-groups managed update fancy-be-mig \
+    --zone=$ZONE \
     --health-check fancy-be-hc \
     --initial-delay 300
 ```
 # Check the progress of task 5
-____
-## Run in cloudshell
 ```cmd
 gcloud compute http-health-checks create fancy-fe-frontend-hc \
   --request-path / \
@@ -120,16 +123,16 @@ gcloud compute backend-services create fancy-be-products \
   --port-name products \
   --global
 gcloud compute backend-services add-backend fancy-fe-frontend \
+  --instance-group-zone=$ZONE \
   --instance-group fancy-fe-mig \
-  --instance-group-zone $ZONE \
   --global
 gcloud compute backend-services add-backend fancy-be-orders \
+  --instance-group-zone=$ZONE \
   --instance-group fancy-be-mig \
-  --instance-group-zone $ZONE \
   --global
 gcloud compute backend-services add-backend fancy-be-products \
+  --instance-group-zone=$ZONE \
   --instance-group fancy-be-mig \
-  --instance-group-zone $ZONE \
   --global
 gcloud compute url-maps create fancy-map \
   --default-service fancy-fe-frontend
@@ -144,7 +147,6 @@ gcloud compute forwarding-rules create fancy-http-rule \
   --target-http-proxy fancy-proxy \
   --ports 80
 cd ~/monolith-to-microservices/react-app/
-gcloud compute forwarding-rules list --global
 export IP1=$(gcloud compute forwarding-rules describe fancy-http-rule --global --format='get(IPAddress)')
 cd ~/monolith-to-microservices/react-app
 rm -f .env
@@ -160,32 +162,38 @@ cd ~
 rm -rf monolith-to-microservices/*/node_modules
 gsutil -m cp -r monolith-to-microservices gs://fancy-store-$DEVSHELL_PROJECT_ID/
 gcloud compute instance-groups managed rolling-action replace fancy-fe-mig \
+    --zone=$ZONE \
     --max-unavailable 100%
 gcloud compute instance-groups managed set-autoscaling \
   fancy-fe-mig \
+  --zone=$ZONE \
   --max-num-replicas 2 \
   --target-load-balancing-utilization 0.60
 gcloud compute instance-groups managed set-autoscaling \
   fancy-be-mig \
+  --zone=$ZONE \
   --max-num-replicas 2 \
   --target-load-balancing-utilization 0.60
 gcloud compute backend-services update fancy-fe-frontend \
     --enable-cdn --global
-gcloud compute instances set-machine-type frontend --machine-type custom-4-3840
+gcloud compute instances set-machine-type frontend \
+  --zone=$ZONE \
+  --machine-type e2-small
 gcloud compute instance-templates create fancy-fe-new \
+    --region=$REGION \
     --source-instance=frontend \
     --source-instance-zone=$ZONE
 gcloud compute instance-groups managed rolling-action start-update fancy-fe-mig \
-    --version template=fancy-fe-new
+  --zone=$ZONE \
+  --version template=fancy-fe-new
 cd ~/monolith-to-microservices/react-app/src/pages/Home
 mv index.js.new index.js
-cat ~/monolith-to-microservices/react-app/src/pages/Home/index.js
 cd ~/monolith-to-microservices/react-app
 npm install && npm run-script build
 cd ~
 rm -rf monolith-to-microservices/*/node_modules
 gsutil -m cp -r monolith-to-microservices gs://fancy-store-$DEVSHELL_PROJECT_ID/
 gcloud compute instance-groups managed rolling-action replace fancy-fe-mig \
-    --max-unavailable=100%
+  --zone=$ZONE \
+  --max-unavailable=100%
 ```
-# Now check the progress of all left tasks
