--- a/gsp662.md
+++ b/gsp662.md
@@ -9,6 +9,7 @@ gcloud services enable compute.googleapis.com
 gsutil mb gs://fancy-store-$DEVSHELL_PROJECT_ID
 git clone https://github.com/googlecodelabs/monolith-to-microservices.git
 cd ~/monolith-to-microservices
+chmod +x setup.sh
 ./setup.sh
 nvm install --lts
 cd ~/monolith-to-microservices
